--- a/about.html
+++ b/about.html
@@ -5,8 +5,8 @@
     <title>About Lydia</title>
 </head>
 <body>
-  <img src="./assets/images/EwwItsMe.jpg" alt="A profile Picture of Lydia" >  
-      <img src="./assets/images/EwwItsMeAtDevilsTower.jpg" alt="A profile Picture of Lydia" >  
+  <img src="./assets/images/EwwItsMe.jpg" alt="A profile Picture of Lydia" height="200">  
+  <img src="./assets/images/EwwItsMeAtDevilsTower.jpg" alt="A profile Picture of Lydia" height="200"> 
  <h1>About me!</h1> <a href="./contact.html">Contact</a> 
  <br>
  <a href="./index.html">My Resume</a>
